##Text encoding: utf-8

2011-01-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: do not call Application::Load() for native files.
	* libs/gcp/document.cc: fixed merging molecules owned by another object.
	* plugins/paint/cycles/cycletool.cc: never address a deleted string.

2011-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: add content type.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/fragment.cc: removed obsolete code.
	* libs/gcp/mechanism-step.cc: don't crash when adding an arrow ouside
	a reaction.
	* plugins/paint/cycles/cycletool.cc: do not add a cycle when not allowed.

2011-01-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/Makefile.am: add libexecdir to DEFS.
	* libs/gcu/application.cc: new methods to support the use of babelserver.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: remove unwanted white spaces.
	* openbabel/babelserv.cc: use a user dependant socket.
	* openbabel/socket.cc: fix loading from file.
	* tests/testbabelserver.c (main): use a user dependant socket.

2011-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: allow load/save operations using any gsf
	stream.
	* libs/gcu/application.h: ditto.
	* openbabel/babelserv.cc: fixed reading from socket.
	* openbabel/socket.cc: implement input and output from/to local files.
	* openbabel/socket.h: ditto.
	* tests/testbabelserver.c (main): use openbabel format names instead of
	mime types.

2011-01-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* openbabel/babelserv.cc: make valgrind happy.
	* openbabel/socket.cc: make things work.
	* openbabel/socket.h: ditto.
	* tests/testbabelserver.c (main): write a mol file for methane and get
	the InChI.

2011-01-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* openbabel/babelserv.cc: more work on reading commands.
	* openbabel/socket.cc: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: update parent after adding
	an arrow.