@@ -4,13 +4,11 @@ INCLUDES = \
 		-I$(top_srcdir) -I$(top_srcdir)/libs \
 		$(goffice_CFLAGS) \
 		$(gtkglext_CFLAGS) \
-		$(openbabel_CFLAGS) \
 		$(GCU_CFLAGS)
 libgcu_@GCU_API_VER@_la_LDFLAGS = \
 		-version-info  @GCU_VERSION_INFO@
 libgcu_@GCU_API_VER@_la_LIBADD = \
 		$(goffice_LIBS) \
-		$(openbabel_LIBS) \
 		$(gsf_LIBS) \
 		$(gtkglext_LIBS)
 DEFS += -DDATADIR=\"$(datadir)\" \
